# RE-call

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
corpus/: decisions.md  hypotheses.md  infra.md  rate_limits_v1.md  rate_limits_v2.md
docs/: AUTH.md  CASE_STUDY.md  ENTAILMENT_SUPERSESSION_STUDY.md  RAG_TRAINING_STUDY.md  USING_WITH_CLAUDE.md  WRITEUP.md
examples/: README.md  self_recall_agent.py
finetune/: README.md  confusable_queries.json  hard_queries.json  train.py
finetune/confusable_corpus/: aster.md  basil.md  clove.md  dill.md  elm.md  fern.md  gorse.md  holly.md  iris.md
hooks/: pre-commit
recall/: __init__.py  _env.py  cache.py  calibration.py  check.py  cli.py  embeddings.py  entailment.py  fix.py  frontmatter.py  guards.py  index.py  lint.py  observability.py  rerank.py  retriever.py  semantic_lint.py  store.py  timing.py  trust.py  types.py
recall/eval/: __init__.py  __main__.py  _show_ids.py  bm25.py  calibrate.py  harness.py  labelled.py  locomo.py  locomo_abstention.py  locomo_entailment_sweep.py  longmemeval.py  longmemeval_perq.py  metrics.py  near_miss.json  peps_questions.json  queries.json  scale.py  synthetic.py
recall/eval/corpus/: anti_relitigation.md  autoscaling.md  backups.md  browser_support.md  cache_decision.md  cache_ttl_v1.md  cache_ttl_v2.md  corpus_gap_definition.md  datastore_choice.md  deploy_freeze.md  h014_prompt_injection.md  h021_reranking.md  incident_checkout_500.md  incident_stale_flag.md  indexer_freshness.md  retry_policy.md  rollout_flag_v1.md  rollout_flag_v2.md  rrf_definition.md  search_engine_v1.md  search_engine_v2.md  secrets_handling.md
recall/integrations/: __init__.py  langchain.py  llamaindex.py
recall_mcp/: __init__.py  auth.py  limits.py  server.py  service.py  stores.py
results/: FINDINGS.md  RESULTS.md
results/scale/: SCALE.md
results/scale-pressure/: SCALE.md
tests/: conftest.py  test_auth.py  test_cache.py  test_calibration.py  test_check.py  test_cli.py  test_embeddings.py  test_embeddings_batch.py  test_embeddings_cloud.py  test_entailment.py  test_env_loader.py  test_eval_bm25.py  test_eval_calibrate.py  test_eval_calibrate_heldout.py  test_eval_harness.py  test_eval_locomo.py  test_eval_locomo_abstention.py  test_eval_locomo_entailment_sweep.py  test_eval_longmemeval.py  test_eval_longmemeval_perq.py  test_eval_metrics.py  test_eval_nearmiss.py  test_eval_synthetic.py  test_example_agent.py  test_fix.py  test_frontmatter.py  test_guards.py  test_hnsw_filtered_recall.py  test_index.py  test_index_incremental.py  test_index_quota.py  test_index_unreachable_sources.py  test_integrations_langchain.py  test_integrations_llamaindex.py  test_limits.py  test_lint.py  test_mcp_auth_http.py  test_mcp_auth_wiring.py  test_mcp_concurrency.py  test_mcp_service_forget.py  (+23 more)
