[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall"
version = "0.5.0"
description = "Retrieval-Augmented Self-Recall for long-running agents (pgvector)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.3",
]

[project.optional-dependencies]
fastembed = ["fastembed>=0.3"]
# Connection pooling — required only for PgVectorStore(pool_size=...), i.e. any server
# process. A CLI runs single-connection and should not pay for a pool maintenance thread.
pool = ["psycopg-pool>=3.2"]
# NB: the mcp floor is 1.27.2. Two separate requirements sit behind it, and the LATER one binds:
#   - 1.10.0 added the resource-server auth split (`AuthSettings.resource_server_url` + FastMCP's
#     `token_verifier=`), which `recall_mcp/auth.py` needs. Below it FastMCP raises on the
#     `auth=`/`auth_server_provider=` XOR, so the server fails loudly at import — not silently.
#   - 1.27.2 added `AccessToken.subject` / `.claims`, which is how `server.py` carries the tenant
#     (`AccessToken(..., claims={"tenant": ...})`, read back in `_current_tenant`). On 1.10-1.27.1
#     pydantic's `extra="ignore"` DROPS the claim at construction and every authenticated call
#     then dies on `token.claims` with AttributeError. That whole range installs cleanly and is
#     broken at request time, so 1.10 was not a sufficient floor.
# Keep this in step with the `dev` extra below.
mcp = ["mcp>=1.27.2", "psycopg-pool>=3.2"]
voyage = ["voyageai>=0.2"]
# NB: rerank / entail / finetune pin the same sentence-transformers floor — bump all three together.
rerank = ["sentence-transformers>=3.0"]
entail = ["sentence-transformers>=3.0"]
eval = ["matplotlib>=3.7"]
finetune = ["sentence-transformers>=3.0", "datasets>=2.0", "accelerate>=1.1", "numpy"]
# pytest-timeout: a chunker that fails to terminate would otherwise HANG the run instead of
# failing it — a hung CI job reads as "still running", not as a regression.
dev = ["pytest>=8", "pytest-timeout>=2.3", "ruff>=0.5", "mcp>=1.27.2", "psycopg-pool>=3.2"]

[project.scripts]
recall = "recall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["recall", "recall_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
