[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# DISTRIBUTION name `recall-rag`; IMPORT name stays `recall`. They differ because `recall` on PyPI
# is taken — by an unrelated Python-2-era RPC framework whose only release is from 2014
# (https://pypi.org/project/recall/). It is not coming back, but the name is not reclaimable.
#
# `re-call` was the intended name and cannot be registered either: PyPI's typosquat-similarity
# guard collapses separators, so `re-call` normalises to `recall` and is rejected as "too similar
# to an existing project" — a stricter check than the exact-name availability that the `/simple/`
# index reports. `recall-rag` adds a distinguishing token (it collapses to `recallrag`, not
# `recall`), which clears the guard while keeping the `recall` identity in the name.
#
# ⚠️ The consequence of sharing the IMPORT name, stated because it bites at import time rather than
# at install time: the squatting `recall` distribution ALSO provides a top-level `recall` module,
# so installing both into one environment gives two distributions writing the same import path, and
# whichever installed last wins. Nothing detects it. Install `recall-rag`, never `recall`.
name = "recall-rag"
version = "0.5.1"
description = "Trustworthy retrieval for an AI agent's own memory — verdict, confidence and provenance per hit, or an explicit abstention"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Giulio D'Erme" }]
keywords = [
    "rag", "retrieval-augmented-generation", "agent-memory", "pgvector", "postgresql",
    "hybrid-search", "vector-search", "reranking", "mcp", "model-context-protocol",
    "abstention", "calibration", "llm-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]

dependencies = [
    "psycopg[binary]>=3.3.4",
    # >=0.4, not >=0.3: `from pgvector import Vector` (recall/store.py) is a top-level export that
    # only exists from 0.4.0. On 0.3.x the package imports but that name does not resolve, so the
    # floor was declaring support for versions where `import recall.store` raises ImportError.
    "pgvector>=0.4",
]

[project.optional-dependencies]
fastembed = ["fastembed>=0.3"]
# Connection pooling — required only for PgVectorStore(pool_size=...), i.e. any server
# process. A CLI runs single-connection and should not pay for a pool maintenance thread.
pool = ["psycopg-pool>=3.2"]
# NB: the mcp floor is 1.27.2. Two separate requirements sit behind it, and the LATER one binds:
#   - 1.10.0 added the resource-server auth split (`AuthSettings.resource_server_url` + FastMCP's
#     `token_verifier=`), which `recall_mcp/auth.py` needs. Below it FastMCP raises on the
#     `auth=`/`auth_server_provider=` XOR, so the server fails loudly at import — not silently.
#   - 1.27.2 added `AccessToken.subject` / `.claims`, which is how `server.py` carries the tenant
#     (`AccessToken(..., claims={"tenant": ...})`, read back in `_current_tenant`). On 1.10-1.27.1
#     pydantic's `extra="ignore"` DROPS the claim at construction and every authenticated call
#     then dies on `token.claims` with AttributeError. That whole range installs cleanly and is
#     broken at request time, so 1.10 was not a sufficient floor.
# Keep this in step with the `dev` extra below.
mcp = ["mcp>=1.27.2", "psycopg-pool>=3.2"]
voyage = ["voyageai>=0.2"]
# NB: rerank / entail / finetune pin the same sentence-transformers floor — bump all three together.
rerank = ["sentence-transformers>=3.0"]
entail = ["sentence-transformers>=3.0"]
eval = ["matplotlib>=3.7"]
finetune = ["sentence-transformers>=3.0", "datasets>=2.0", "accelerate>=1.1", "numpy"]
# pytest-timeout: a chunker that fails to terminate would otherwise HANG the run instead of
# failing it — a hung CI job reads as "still running", not as a regression.
#
# ruff is UPPER-capped, and that is the point of the pin. A linter is the one dependency where
# resolving "newest" makes CI non-reproducible: ruff stabilises new rules in a minor release, so
# an unpinned `ruff check .` starts failing on unchanged code the day a release lands — which is
# exactly what 0.16.0 did to this repo (UP017 `datetime.UTC`, stricter import sorting; 131 hits
# across the existing suite, none from any code change). The floor stays open; only the ceiling
# is fixed, below the release that changed the ruleset. Adopting 0.16's rules is a deliberate
# repo-wide sweep — bump the cap and fix the findings in its own PR, not as a side effect of an
# unrelated one.
dev = [
    "pytest>=8", "pytest-timeout>=2.3", "pytest-cov>=5", "ruff>=0.5,<0.16",
    "mcp>=1.27.2", "psycopg-pool>=3.2",
]

# Declared LAST among the `[project]` sub-tables: every bare key above (`dependencies`,
# `classifiers`, …) belongs to `[project]`, and opening a sub-table earlier would silently
# reparent whatever followed it.
[project.urls]
Homepage = "https://github.com/GiulioDER/RE-call"
Source = "https://github.com/GiulioDER/RE-call"
Issues = "https://github.com/GiulioDER/RE-call/issues"
Changelog = "https://github.com/GiulioDER/RE-call/blob/master/CHANGELOG.md"
"Evaluation findings" = "https://github.com/GiulioDER/RE-call/blob/master/results/FINDINGS.md"
"Security policy" = "https://github.com/GiulioDER/RE-call/blob/master/SECURITY.md"

[project.scripts]
recall = "recall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["recall", "recall_mcp"]

[tool.pytest.ini_options]
# `pytest-timeout` was a declared dependency with nothing configuring it, which made it inert:
# the comment beside it in `[project.optional-dependencies].dev` explains that a test which
# fails to terminate "reads as 'still running', not as a regression", and that was exactly the
# state the suite was in. CI runs bare `pytest -q`, so a hang burned the job's full timeout
# instead of failing. 120s is far above the slowest test here (the whole suite runs in ~3
# minutes) and far below anything anyone would wait for; a test with a legitimate reason to
# take longer can raise its own with `@pytest.mark.timeout(n)`.
#
# `thread` rather than `signal`: signal-based timeouts do not work on Windows, and this suite is
# developed there and run on Linux in CI.
timeout = 120
timeout_method = "thread"

[tool.ruff]
line-length = 100
target-version = "py311"

# Static typing. 81% of this package's functions already carried a return annotation before this
# section existed, and nothing checked any of them — which is the state where the annotations are
# documentation rather than a constraint, and where documentation drifts. Turning the checker on
# found one real defect (`RECALL_TRANSPORT` was an unvalidated env string flowing into a
# `Literal`-typed SDK parameter) and one latent crash (`ensure_schema` indexed a `None` row when
# pointed at an existing non-recall table).
#
# `disallow_untyped_defs` rather than a permissive baseline: a partially-checked package silently
# stops checking wherever an annotation is missing, so the gate would pass while shrinking.
# No `python_version` pin. Setting it to the 3.11 floor makes mypy parse every installed stub at
# 3.11 too, and numpy's stubs use 3.12 `type` syntax — a hard parse error that no per-module
# override suppresses, so the gate would fail on a dependency's stub rather than on this code.
# The floor is checked where it is actually meaningful: the `floor` CI job RUNS the suite on
# 3.11 with the declared minimum of every direct dependency.
[tool.mypy]
files = ["recall", "recall_mcp"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Optional extras, absent from the type-check job by design: their absence is what proves the
# import guards work, and installing torch to type-check a 40-line reranker is not a trade worth
# making. `follow_imports = skip` rather than plain `ignore_missing_imports` so the result does
# NOT depend on whether the extra happens to be installed — a local run with `[fastembed]` and a
# CI run without it must agree, or the gate is advisory.
[[tool.mypy.overrides]]
module = [
    "fastembed.*",
    "voyageai.*",
    "sentence_transformers.*",
    "matplotlib.*",
    "datasets.*",
    # Transitive of the extras above and of pgvector; never imported by this package directly.
    "numpy.*",
]
ignore_missing_imports = true
follow_imports = "skip"
